# ruc-auto-course

./: .env.example  .gitignore  CONTEXT.md  README.md  auto_course.py  docker-compose.yml  pyproject.toml
backend/: Dockerfile
backend/app/: main.py  models.py
backend/app/routers/: monitor.py  settings.py  students.py
backend/app/services/: auth.py  grade.py  monitor.py
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/api/: index.ts
frontend/src/components/: GradeTable.vue  SmtpSettings.vue
frontend/src/views/: Dashboard.vue  StudentDetail.vue
nginx/: Dockerfile
